--- a/src/views/ProductDetail.css
+++ b/src/views/ProductDetail.css
@@ -19,52 +19,9 @@
     margin-bottom: 5px;
 }
 
-.product-detail__button{
-    border-radius: 5px;
+#btnViewCart, #btnBack{
     height: 32px;
-    text-align: center;
-    margin: 0px;
-    padding: 5px;
-    color: black;
-    font-weight: bolder;
-    font-size: 14px;
     width: 100px;    
-}
-
-a.product-detail__button{    
-    text-decoration: none;    
-    display: inline-block;
-}
-
-.lime{
-    background-color: lime;
-    color: white;
-    opacity: 1;
-    transition: 0.3s;
-    --webkit-transition: 0.3s;
-    margin-bottom: 20px;
-}
-
-.addToCart{
-    background-color: transparent;
-    color: darkgreen;
-    border-color: lime;
-    text-decoration: none;    
-    display: inline-block;
-    padding: 3px;    
-    opacity: 1;
-    transition: 0.3s;
-    --webkit-transition: 0.3s;
-}
-
-.product-detail__button.lime:hover{
-    opacity: 0.6;
-    color: black;
-}
-
-.product-detail__button.addToCart:hover{
-    opacity: 0.8;
-    color: black;
 }
 
 .product-detail__description{
