aplicando estilo nos itens do carrinho

--- a/src/views/Cart.css
+++ b/src/views/Cart.css
@@ -2,33 +2,9 @@
     box-sizing: border-box; 
     margin: 0px auto;
 }
-.cart-product-list {   
-    margin: 0px;
-    padding: 0px;    
-}
 
-.cart-product-list > li {
-    list-style: none;
-    display: inline-block;
-    width: 25%;
-    height: 100%;
-    margin-bottom: 40px;
-}
-
-.cart-product-item {   
-    box-sizing: border-box;    
+.align-btn-product--remove{ 
     text-align: center;
-    margin: 0px;
-    padding: 0px; 
-}
-
-.cart-product-item > img{
-    width: 210px;
-    height: 167px;
-}
-
-.cart-product-item-name{
-    height: 20px;
 }
 
 #btnCartVoltar{
