--- a/src/views/Cart.css
+++ b/src/views/Cart.css
@@ -4,7 +4,13 @@
 }
 
 .align-btn-product--remove{ 
+    margin-top: 10px;
     text-align: center;
+}
+
+#cart-empty h1, #cart-empty h2{
+ text-align: center;
+ color: #808080;
 }
 
 #btnCartVoltar{
@@ -30,7 +36,17 @@
     box-shadow: 2px 2px 10px black
 }
 
+#btn-product--remove:focus,
+    #btn-product--remove:active {
+    outline: none;
+    background-color: none;
+  }
+
 #btnCartVoltar:hover{
     opacity: 0.7;
+}
+
+.cart-item{
+    margin-bottom: 30px;
 }
 
