--- a/src/views/ProductList.css
+++ b/src/views/ProductList.css
@@ -6,11 +6,16 @@
     margin: 6px 12px;
 }
 
-.productItem {    
+.productItem,    
+.productItem:active {    
     text-align: center;
     height: 350px;
-    margin-bottom: 30px; 
-    padding: 5px;  
+    padding: 5px;      
+    box-shadow: none;
+}
+
+.productList__item{    
+    margin-bottom: 50px; 
 }
 
 .productItem:hover{
@@ -47,7 +52,9 @@ a.productList__cartView{
     display: inline-block;
 }
 
-.productList__cartView{
+.productList__cartView:link, 
+.productList__cartView:visited,
+.productList__cartView:active {
     width: 60px;
     height: 60px;
     text-decoration: none;
