--- a/src/content/media_query.css
+++ b/src/content/media_query.css
@@ -11,6 +11,15 @@
         height: 100px;
     }
 
+    .productItem--detail:hover{
+      text-decoration: none;
+       color: black;  
+    }
+
+    .productItem:hover{      
+      color: black;  
+    }
+
     .productItem__name{
         padding: 2px;
         font-size: 14px;
