--- a/src/content/media_query.css
+++ b/src/content/media_query.css
@@ -18,6 +18,7 @@
 
     .productItem:hover{      
       color: black;  
+      box-shadow: none;
     }
 
     .productItem__name{
@@ -52,4 +53,8 @@
       .capitalize::first-letter{   
         font-size: 30px;
       }
+
+      .productList__cartView:hover{
+        opacity: 1;
+    }
 } 
